--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grunt-glsl-threejs",
   "description": "A Grunt taks for wrapping GLSL Shader code in Javascript packages, ready to be used in Three.js",
   "version": "0.1.4",
+  "license": "MIT",
   "homepage": "https://github.com/unit9IT/grunt-glsl-threejs",
   "author": {
     "name": "Daniele Pelagatti",
@@ -28,14 +29,14 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-nodeunit": "~0.3.3",
-    "grunt": "~0.4.4",
-    "grunt-contrib-coffee": "~0.10.1"
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-nodeunit": "~0.4.0",
+    "grunt-contrib-coffee": "~0.13.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.4"
+    "grunt": "~0.4.5"
   },
   "keywords": [
     "gruntplugin"
